hphp/hack/test/typecheck/class_abstract_final_4.php.exp
File "class_abstract_final_4.php", line 7, characters 14-16:
`Foo` is uninstantiable (Typing[4002])
File "class_abstract_final_4.php", line 3, characters 22-24:
Declaration is here
