hphp/hack/test/typecheck/class_abstract_final_4.php
<?hh // partial

abstract final class Foo {
  public static function bar() {}
}

class C<T as Foo> {}
